--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -114,7 +114,7 @@ Internet Solutions Corporation.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/3EE2BF3FA5'>Paymentsense - Jobs: Business Intelligence Analyst (12 month FTC ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/3EE2BF3FA5'>Paymentsense - Jobs: Business Intelligence Analyst (12 month FTC ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Business Intelligence Analyst (12 month FTC, Maternity 
 Cover) at Paymentsense.</p>
@@ -123,7 +123,7 @@ Cover) at Paymentsense.</p>
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Business Intelligence Analyst at Zengistics.</p>
 <hr/>
-<h5><a href='https://street-team.workable.com/j/0440CEA2E9?viewed=true'>Verve - Jobs: Business Intelligence Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://street-team.workable.com/j/0440CEA2E9?viewed=true'>Verve - Jobs: Business Intelligence Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Business Intelligence Analyst at Verve.</p>
 <hr/>
@@ -177,7 +177,7 @@ Technologies Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/mediacom-na/job/odczafwS'>MediaCom Careers - Manager, Business Intelligence</a></h5> 
+<h5><a href='https://jobs.jobvite.com/mediacom-na/job/odczafwS'>MediaCom Careers - Manager, Business Intelligence</a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -220,7 +220,7 @@ Media Hungary Kft.</p>
 believe a workplace food program is something employees should love and look
 ?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/temper/jobs/4313851002'>Job Application for Business Intelligence Analyst at Temper</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/temper/jobs/4313851002'>Job Application for Business Intelligence Analyst at Temper</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... As our Business Intelligence Analyst you will be our driver and executer in 
 developing and implementing metrics and reporting to improve our business and
@@ -258,7 +258,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/doriltoncapital/jobs/4342999002'>Job Application for Solutions Architect - Business Intelligence/Data ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/doriltoncapital/jobs/4342999002'>Job Application for Solutions Architect - Business Intelligence/Data ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Dorilton Capital is looking for a Business Intelligence/Data Warehouse (BI/DW) 
 Solutions Architect to design and build the firm's Data Warehouse and Business?...</p>
@@ -387,7 +387,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Redwood City California</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/rappi/e8cd1a65-94e4-4ecd-a129-008e088875c3'>Rappi - Business Intelligence Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rappi/e8cd1a65-94e4-4ecd-a129-008e088875c3'>Rappi - Business Intelligence Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -449,7 +449,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kfit/e16df70c-8e03-4c63-92e5-d141dd074ff0'>Fave - Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/kfit/e16df70c-8e03-4c63-92e5-d141dd074ff0'>Fave - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -461,7 +461,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/mediacom-emea/job/oR1yafwk'>MediaCom Careers - Senior Business Intelligence Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/mediacom-emea/job/oR1yafwk'>MediaCom Careers - Senior Business Intelligence Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
